# XPlay

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/pp/client/xplay/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-lib.h
app/src/main/cpp/audio/: FFResample.cpp  FFResample.h  IAudioPlay.cpp  IAudioPlay.h  IResample.cpp  IResample.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/builder/: FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayerBuilder.cpp  IPlayerBuilder.h
app/src/main/cpp/data/: XData.cpp  XData.h  XParameter.cpp  XParameter.h
app/src/main/cpp/decode/: FFDecode.cpp  FFDecode.h  IDecode.cpp  IDecode.h
app/src/main/cpp/demux/: FFDemux.cpp  FFDemux.h  IDemux.cpp  IDemux.h
app/src/main/cpp/log/: XLog.cpp  XLog.h
app/src/main/cpp/observer/: IObservable.cpp  IObservable.h  IObserver.cpp  IObserver.h  TestObserver.cpp  TestObserver.h
app/src/main/cpp/player/: IPlayer.cpp  IPlayer.h
app/src/main/cpp/proxy/: IPlayerProxy.cpp  IPlayerProxy.h
app/src/main/cpp/thread/: XThread.cpp  XThread.h
app/src/main/cpp/videoviewer/: GLVideoView.cpp  GLVideoView.h  IVideoView.cpp  IVideoView.h  XEGL.cpp  XEGL.h  XShader.cpp  XShader.h  XTexture.cpp  XTexture.h
app/src/main/java/com/pp/client/xplay/: MainActivity.java  MainViewModel.java  PPApplication.java
app/src/main/java/com/pp/client/xplay/callback/: UICallback.java
app/src/main/java/com/pp/client/xplay/jni/: Jni.java
app/src/main/java/com/pp/client/xplay/manager/: PlayManager.java
app/src/main/java/com/pp/client/xplay/util/: WeakReferenceHandler.java
app/src/main/java/com/pp/client/xplay/videoviewer/: GLRenderer.java  PPPlay.java  PPPlayViewModel.java  ThreadPool.java  XPlay.java  XplayPool.java
app/src/main/java/com/pp/client/xplay/videoviewer/callback/: VideoViewerHelper.java
app/src/main/res/drawable/: ic_pause.xml  ic_play.xml  ic_playlarge.xml  selector_play.xml  selector_playorpause.xml  shape_oval_black.xml  shape_pause.xml  shape_play.xml  shape_seekbar_bg.xml
app/src/main/res/layout/: activity_main.xml  layout_ppplay.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/pp/client/xplay/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
note/: ffmpeg相关函数介绍
ppcamera/: build.gradle
ppcamera/src/androidTest/java/com/xplay/pp/ppcamera/: ExampleInstrumentedTest.java
ppcamera/src/main/: AndroidManifest.xml
ppcamera/src/main/java/com/xplay/pp/ppcamera/: MainActivity.java
ppcamera/src/main/res/layout/: activity_main.xml
ppcamera/src/main/res/values/: colors.xml  strings.xml  styles.xml
ppcamera/src/test/java/com/xplay/pp/ppcamera/: ExampleUnitTest.java
scaletimebar/: build.gradle
scaletimebar/src/main/java/com/xplay/pp/scaletimebar/: MainActivity.java
scaletimebar/src/main/java/com/xplay/pp/scaletimebar/timebar/: ScaleModel.java  ScaleTimeBar.java  SizeParam.java  TimeBarView.java
scaletimebar/src/main/res/layout/: activity_main.xml
